# mudpeter

./: .gitignore  README.md  config1.toml  pyproject.toml
src/mudpeter/: cli.py  config.py  db.py  models.py  pipeline.py
src/mudpeter/fulltext/: retrieve.py
src/mudpeter/pdf/: extract.py
src/mudpeter/pubmed/: articles.py  bioc.py
src/mudpeter/unpaywall/: retrieve.py
src/mudpeter/utils/: export.py  utils.py
tests/: test_utils.py
